[tool.poetry]
name = "contractorium"
version = "0.1.0"
description = ""
authors = ["D0rs4n <41237606+D0rs4n@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beaker-pyteal = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
